--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,23 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: 0.02em;
+}
+
+ul,
+ul li {
+  list-style: none;
+}
+a,
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Open Sans", sans-serif;
 }
 * {
   padding: 0px;
@@ -23,22 +31,15 @@ code {
   box-sizing: border-box;
 }
 
-/* Links */
-
 a,
 a:link,
 a:visited {
-  /* color: inherit; */
   text-decoration: none;
-  /* display: inline-block; */
 }
 
 a:hover {
-  /* color: inherit; */
   text-decoration: none;
 }
-
-/* Common */
 
 aside,
 nav,
@@ -78,8 +79,6 @@ svg {
 address {
   font-style: normal;
 }
-
-/* Form */
 
 input,
 textarea,
